apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__filter_basic_query-2.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: [\"profile\".to_string(),\n                    \"internal\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_policies: {"internal", "profile", "read user", "read username"}
successful policies: ["profile", "internal"]
filtered:
query {
  topProducts {
    type
    internal
  }
}

paths: ["/me"]
