apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__fragment_fields.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            topProducts {
                type
                ...F
            }
        }

        fragment F on Product {
            reviews {
                body
            }
        }
        
extracted_policies: {"review"}
successful policies: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/reviews/@"]
