apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY2,\n    extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                    other
                }
                ... on B {
                    id
                    other
                }
            }
        }
        
extracted_policies: {"a", "b"}
successful policies: []
filtered:
query {
  test
  itf {
    ... on A {
      other
    }
    ... on B {
      other
    }
  }
}

paths: ["/itf/... on A/id", "/itf/... on B/id"]
